# morphops

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
agent/: confirmation.py  core.py  loop.py  mcp_client.py  safety.py  tool_registry.py
bot/: confirmation.py  handlers.py  main.py  telegram_transport.py
tools/: __init__.py  api_tools.py  db_tools.py  meta_tools.py  ssh_tools.py
